css/styles.css
/* ... */
/* iPhone */
@media screen and (max-width:480px) {
    nav .container {
        background-color: white;
        width: 100vw;
    }
    nav ul {
        display: none;
    }
    
    #home h1 {
        font-size: 4.5rem;
    }
    #home p {
        font-size: 1.5rem;
    }
    #home .subheading {
        font-size: 1rem;
        margin-top: .75rem;
    }
    #about {
        height: auto;
        padding: 4rem 8vw 0 8vw;
    }
  
    #about .aboutMeContent .left p,
    #about .aboutMeContent .right p{
        font-size: 1rem;
    }
    #about .left h3 {
        font-size: 1.25rem;
    }
    #about .right h3 {
        font-size: 1.125rem;
    }
    #about form {
        margin: 20px 0 20px 0;
    }
    
    #projects {
        align-items: center;
        height: auto;
        padding: 3rem 0;
    }
  
    #projects .projectContainer {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        
    }
    .projectCard {
        width: 90%;
        height: auto;
        padding: 1rem;
    }
    .projectCard h2 {
        text-align: center;
    }
    .project1 {
        padding: 30px;
    }
    .projectCard a {
        width: fit-content;
        text-align: center;
        font-size: .875rem;
    }
    #contact {
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 3rem;
    }
    
    #contact h1 {
        font-size: 4rem;
        margin-bottom: 2rem;
    }
    #contact .wide{
        flex-direction: column;
    }
    #contact .wide .left {
        width: 100%;
        align-items: center;
    }
    #contact .wide .left  img {
        width: 80%;
    }
    
    #contact .wide .right { 
        width: 100%;
        margin: 2rem 0 0 0;
    }
    
}

